<resources>
    <string name="app_name">Car Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_navigation">Navigation</string>
    <string name="menu_media">Media</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logs">Logs</string>
    <string name="speed">Speed</string>
    <string name="rpm">RPM</string>
    <string name="fuel">Fuel Level</string>
    <string name="temperature">Temperature</string>
    <string name="customize_dashboard">Customize Dashboard</string>
    <string name="save_layout">Save Layout</string>
    <string name="reset_layout">Reset Layout</string>
    <string name="mph">MPH</string>
    <string name="km_h">KM/H</string>
    <string name="x1000_rpm">x1000 RPM</string>
    <string name="fuel_level">Fuel Level</string>
    <string name="engine_temp">Engine Temp</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="fab_content_description">Action Button</string>
    <string name="image_view_item_transform_content_description">Transform Item Image</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="clear_logs_confirmation">Are you sure you want to delete all logs? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
