<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_navigation"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/menu_navigation" />
        <item
            android:id="@+id/nav_media"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_media" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_logs"
            android:title="Logs" />
    </group>
</menu>
