<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.cardashboardtest.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_navigation"
        android:name="com.example.cardashboardtest.ui.navigation.NavigationFragment"
        android:label="@string/menu_navigation"
        tools:layout="@layout/fragment_navigation" />

    <fragment
        android:id="@+id/nav_media"
        android:name="com.example.cardashboardtest.ui.media.MediaFragment"
        android:label="@string/menu_media"
        tools:layout="@layout/fragment_media" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.cardashboardtest.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
