<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.cardashboardtest.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_navigation"
            app:destination="@id/nav_navigation" />
        <action
            android:id="@+id/action_dashboard_to_media"
            app:destination="@id/nav_media" />
        <action
            android:id="@+id/action_dashboard_to_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_dashboard_to_logs"
            app:destination="@id/nav_logs" />
    </fragment>

    <fragment
        android:id="@+id/nav_navigation"
        android:name="com.example.cardashboardtest.ui.navigation.NavigationFragment"
        android:label="@string/menu_navigation"
        tools:layout="@layout/fragment_navigation">
        <action
            android:id="@+id/action_navigation_to_dashboard"
            app:destination="@id/nav_dashboard" />
        <action
            android:id="@+id/action_navigation_to_media"
            app:destination="@id/nav_media" />
        <action
            android:id="@+id/action_navigation_to_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_navigation_to_logs"
            app:destination="@id/nav_logs" />
    </fragment>

    <fragment
        android:id="@+id/nav_media"
        android:name="com.example.cardashboardtest.ui.media.MediaFragment"
        android:label="@string/menu_media"
        tools:layout="@layout/fragment_media">
        <action
            android:id="@+id/action_media_to_dashboard"
            app:destination="@id/nav_dashboard" />
        <action
            android:id="@+id/action_media_to_navigation"
            app:destination="@id/nav_navigation" />
        <action
            android:id="@+id/action_media_to_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_media_to_logs"
            app:destination="@id/nav_logs" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.cardashboardtest.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_dashboard"
            app:destination="@id/nav_dashboard" />
        <action
            android:id="@+id/action_settings_to_navigation"
            app:destination="@id/nav_navigation" />
        <action
            android:id="@+id/action_settings_to_media"
            app:destination="@id/nav_media" />
        <action
            android:id="@+id/action_settings_to_logs"
            app:destination="@id/nav_logs" />
    </fragment>

    <fragment
        android:id="@+id/nav_logs"
        android:name="com.example.cardashboardtest.ui.logs.LogsFragment"
        android:label="@string/menu_logs"
        tools:layout="@layout/fragment_logs">
        <action
            android:id="@+id/action_logs_to_dashboard"
            app:destination="@id/nav_dashboard" />
        <action
            android:id="@+id/action_logs_to_navigation"
            app:destination="@id/nav_navigation" />
        <action
            android:id="@+id/action_logs_to_media"
            app:destination="@id/nav_media" />
        <action
            android:id="@+id/action_logs_to_settings"
            app:destination="@id/nav_settings" />
    </fragment>

</navigation>
